@@ -1,0 +1,14 @@
+pkglib_LTLIBRARIES = TimeLimit.la
+
+TimeLimit_la_SOURCES = TimeLimit.cpp
+TimeLimit_la_CPPFLAGS = -I$(top_srcdir)/include
+TimeLimit_la_LDFLAGS = -module -avoid-version
+
+EXTRA_DIST = \
+	README.txt \
+	TimeLimit.def \
+	TimeLimit.sln \
+	TimeLimit.vcproj
+
+MAINTAINERCLEANFILES =	\
+	Makefile.in
